objects/QueueLevelIDs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>X1stLevelQ__c</fullName>
        <label>1stLevelQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2ndLevelQ__c</fullName>
        <label>2ndLevelQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rdLevel_Q_CER__c</fullName>
        <label>3rdLevel_Q_CER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QueueLevelIDs</label>
</CustomObject>